Bug 155865 - Now listening plugin does not work with amarok or juk
Summary: Now listening plugin does not work with amarok or juk
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Now Listening Plugin (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 162712 164586 177599 202996 215417 215856 270015 (view as bug list)
Depends on:
Blocks: 261989
  Show dependency treegraph
 
Reported: 2008-01-15 22:53 UTC by elerran
Modified: 2011-04-12 19:51 UTC (History)
16 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.3
Sentry Crash Report:


Attachments
Status is present (77.63 KB, image/jpeg)
2008-12-21 13:50 UTC, wyldrodney
Details
Status aren't accepted (41.98 KB, image/jpeg)
2008-12-21 13:51 UTC, wyldrodney
Details

Note You need to log in before you can comment on or make changes to this bug.
Description elerran 2008-01-15 22:53:29 UTC
Version:           0.50.0 (using KDE 4.00.00 (KDE 4.0.0), Kubuntu packages)
Compiler:          gcc
OS:                Linux (i686) release 2.6.20-16-386

Now listening plugin does not work with amarok(1.4.8/kde3) or juk(3.0/kde4). When trying to advertise with /media, I get
Now Listening for Kopete - it would tell you what I am listening to, if I was listening to something on a supported media player.
Comment 1 81joe81 2008-01-16 18:20:39 UTC
I can confirm this bug: Kopete 0.50.0 doesn't work with my Amarok 1.4.8
It does not display anything in my status message (as it should do due to my settings), and if I go to tools -> send media info when I am playing a song with Amarok it says:
"None of the supported media players (Amarok, KsCD, JuK, Noatun, Kaffeine, or Quod Libet) are playing anything."
Comment 2 Christoph Watzl 2008-02-05 22:23:02 UTC
Same for me, neither works with Amarok 1.4.8 nor with Amarok 2 nor JuK 3.1. In the plugin's configuration dialog, when I enable the checkbox "Use specified media player" under "Media Player", all entries in the list bellow remain grayed out, and I can't select any specific player. 
I've just compiled everything (kdemultimedia, kdenetwork, ...) with kdesvn-build.
Comment 3 Rubens de Souza Matos Júnior 2008-03-15 22:08:16 UTC
Same of comment #2 to me. When I enable the checkbox "Use specified media player" under "Media Player", all entries in the list bellow remain grayed out, and I can't select any specific player. 
I'm using kde 4.0.2 installed from debian unstable/experimental
Comment 4 Dustin Steiner 2008-05-23 13:12:48 UTC
Same problem as comment #2 for me...
All entries in the Media Player-list remain grayed out.

I'm using KDE 4.0.3 from Fedora 9 and Amarok 1.4.9.1
Comment 5 Dennis Nienhüser 2008-05-23 17:24:42 UTC
SVN commit 811637 by nienhueser:

Change capitalization of the dbus interface to the one amarok is currently using. Fixes nowlistening support for Amarok 2.0.
CCBUG: 155865


 M  +1 -2      nlamarok.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=811637
Comment 6 Dennis Nienhüser 2008-05-23 18:11:24 UTC
SVN commit 811729 by nienhueser:

Change capitalization of the dbus interface for juk. Fixes nowlistening support for JuK in KDE 4.0/4.1.
CCBUG: 155865


 M  +2 -5      nljuk.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=811729
Comment 7 Dennis Nienhüser 2008-05-23 18:34:58 UTC
SVN commit 811754 by nienhueser:

Enable media player selection if requested in the UI.
CCBUG: 155865


 M  +58 -77    nowlisteningprefs.ui  


WebSVN link: http://websvn.kde.org/?view=rev&revision=811754
Comment 8 Dennis Nienhüser 2008-05-28 09:23:38 UTC
*** Bug 162712 has been marked as a duplicate of this bug. ***
Comment 9 Dennis Nienhüser 2008-06-21 13:40:46 UTC
*** Bug 164586 has been marked as a duplicate of this bug. ***
Comment 10 Marius Cirsta 2008-07-17 19:29:48 UTC
 This works now using Kopete svn 833475 and Juk svn 833475 but there's still a problem from what I can tell.
 If Kopete starts first and the NowPlaying plugin was already activated and configured previously and you start Juk after it when you type media , it says "Now Listening for Kopete - it would tell you what I am listening to, if I was listening to something on a supported media player".
 However if Juk is started first , before Kopete /media displays the song currently playing as it should.
Comment 11 Aniket 2008-08-07 23:44:16 UTC
I still cant get this to work with Amarok 1.4.9.1 in fedora 9 and KDE 4 latest packages from rawhide. 
Comment 12 wyldrodney 2008-10-21 08:11:38 UTC
I use Debian Sid/Experimental. Packages are amarok-1.92.2 and kopete-0.60.2(the part of kdenetwork-4.1.2).

Now Listening plugin is turned on, but it works only when I go to Tools -> Send media info.
Then it shows track info in dialog. But it shows(or adds) nothing to my comment.
Comment 13 Kristjan Ugrin 2008-11-21 22:36:05 UTC
Kopete from svn revision 887403 and recent amarok 2.x from svn:
still broken when selecting amarok as specified media player in settings. If I disable this option then it will pick up amarok normally.
Comment 14 wyldrodney 2008-12-21 13:50:45 UTC
Created attachment 29516 [details]
Status is present

Second screenshot shows that status aren't accepted
Comment 15 wyldrodney 2008-12-21 13:51:22 UTC
Created attachment 29517 [details]
Status aren't accepted
Comment 16 wyldrodney 2008-12-21 13:53:21 UTC
These screenshots are of Kopete 0.60.81 and KDE 4.1.85
Comment 17 wyldrodney 2008-12-21 13:55:02 UTC
These screenshots are of Kopete 0.60.81 and KDE 4.1.85
Comment 18 Jesse Litton 2009-02-02 00:57:30 UTC
I think this has been fixed, in recent versions.

At least, it works when I tested it just now with Kopete 0.70.0 + Amarok2 (verified from a windows machine running Yahoo! messenger).
Comment 19 wyldrodney 2009-02-03 03:54:08 UTC
> At least, it works when I tested it just now with Kopete 0.70.0 + Amarok2

It still doesn't work. Kopete-0.70.0(kdemod repository in Arch linux).

Kopete doesn't accept status comment automatically. I need accept it manually to others can see it.

//Sorry for my english
Comment 20 Myriam Schweingruber 2009-11-30 12:57:12 UTC
*** Bug 177599 has been marked as a duplicate of this bug. ***
Comment 21 Myriam Schweingruber 2009-11-30 12:57:58 UTC
*** Bug 215856 has been marked as a duplicate of this bug. ***
Comment 22 Myriam Schweingruber 2009-11-30 12:58:29 UTC
*** Bug 215417 has been marked as a duplicate of this bug. ***
Comment 23 Myriam Schweingruber 2009-11-30 12:59:26 UTC
*** Bug 202996 has been marked as a duplicate of this bug. ***
Comment 24 Dan 2009-11-30 18:05:34 UTC
It works for local tracks, but for Last.fm it seems to work just
for the first track (after skipping it will not work anymore).
Comment 25 Balázs Nagy 2010-01-29 14:23:31 UTC
I have the same issue. This is present since many amarok releases does not seems to be fixed.

I have issues with the local files also. The first track gets picked up in kopete. Than nothing.

Simple Now Playing amarok script.
http://kde-apps.org/content/show.php?content=112728
The output what I get in the txt file is:

isPlaying: false
status: 2


openSUSE 11.2 (x64)
Qt: 4.6.1
KDE: 4.3.4 (KDE 4.3.4) "release 2"
Amarok: 2.2.2
Comment 26 Stefan Borggraefe 2010-06-20 14:12:44 UTC
When Kopete 1.0.80 is already running and I start listening to music with Amarok 2.3.1, the "Now listening" information is only added to my status message in Kopete after I first deactivate the "Now listening" plugin and then activate it again in Kopete's settings.
Comment 27 Kristjan Ugrin 2011-01-23 10:51:27 UTC
This feature seems to be broken in version 1.0.80 - upcoming kde 4.6.
It doesn't advertise no matter what I do, using amarok 2.x.
Comment 28 Kristjan Ugrin 2011-01-23 11:41:15 UTC
UPDATE:
If I choose Edit message, I can see the now playing track, but it seems like
kopete doesn't push that message online.
Comment 29 Rubens de Souza Matos Júnior 2011-01-23 20:14:00 UTC
It works for me now. I'm using Kopete 1.0.0 and Amarok 2.3.2
Comment 30 Giuseppe Calà 2011-02-05 18:24:07 UTC
I confirm for kopete 1.0.80 in Chakra Cyrus (development version with kde 4.6.0).
Comment 31 Andrey Khanov 2011-03-22 08:49:48 UTC
I confirm for kopete 1.0.80 with Amarok 2.4.0 in Arch Linux 64-bit, KDE 4.6.1
Comment 32 Lamarque V. Souza 2011-04-03 00:12:02 UTC
SVN commit 1226903 by lvsouza:

Update accounts' status message when NowPlaying plugin changes
the global status message and not only when user manually set
the global status message.

BUG: 155865
FIXED-IN: 4.6.2


 M  +0 -12     kopete/kopetewindow.cpp  
 M  +11 -0     libkopete/kopetestatusmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1226903
Comment 33 Lamarque V. Souza 2011-04-03 00:13:58 UTC
SVN commit 1226904 by lvsouza:

Update accounts' status message when NowPlaying plugin changes
the global status message and not only when user manually set
the global status message.

BUG: 155865
FIXED-IN: 4.6.2


 M  +0 -12     kopete/kopetewindow.cpp  
 M  +11 -0     libkopete/kopetestatusmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1226904
Comment 34 Lamarque V. Souza 2011-04-03 20:09:24 UTC
*** Bug 270015 has been marked as a duplicate of this bug. ***
Comment 35 Andrey Khanov 2011-04-12 19:46:40 UTC
The bug is still present for me in KDE 4.6.2 on 64-bit Arch Linux.
Comment 36 Lamarque V. Souza 2011-04-12 19:51:25 UTC
The fix did not make it to 4.6.2. It is going to appear in 4.6.3 as stated in the bug header.