Update accounts' status message when NowPlaying plugin changes the global status message and not only when user manually set the global status message.

BUG: 155865
FIXED-IN: 4.6.2

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1226903